[package]
name = "twba-downloader"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
twba-backup-config = { version = "0.1.1", git = "https://github.com/OMGeeky/backup_config.git" }
twba-local-db = { version = "0.2", git = "https://github.com/OMGeeky/twitch_backup.local_db.git" }
twba-reqwest-backoff = { version = "0.1", git = "https://github.com/OMGeeky/twba_reqwest_backoff.git" }
twba-common = { version = "0.2", git = "https://github.com/OMGeeky/twba.common.git" }


tracing-subscriber = "0.3"
tracing = "0.1"
tokio = { version = "1.33", features = ["rt", "rt-multi-thread", "macros"] }

thiserror = "1.0"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = "0.12.4"
chrono = "0.4"
futures = "0.3"
futures-util = "0.3"
shellexpand = "3.1"
